fixed alignment
fixed alignment for mobile version

--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,7 @@ h1 {
 
 .left-align-textbox p {
   padding: 0px 20px 20px;
-  text-align: justify;
+  text-align: left;
   text-justify: inter-word;
   font-size: 20px;
   line-height: 30px;
